Addition of tools and dynamic_array (not tested yet).

--- a/unificator/Makefile
+++ b/unificator/Makefile
@@ -1,6 +1,6 @@
 CC=gcc
-CFLAGS=-I. -Wall -Werror
-OBJ = main.o
+CFLAGS=-Wall -Wextra -O2
+OBJ = main.o unificator_dynamic_array.o unificator_tools.o
 
 %.o: %.cpp
 	$(CC) -c -o $@ $< $(CFLAGS)
