Addition of parsing argument in generator, update of the README.md  and other minor corrections in all the project.

--- a/unificator/Makefile
+++ b/unificator/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-Wall -Wextra -O2
 OBJ = main.o unificator_dynamic_array.o unificator_tools.o unificator_sort.o \
-      unificator_timer.o unificator_socket.o
+      unificator_timer.o unificator_socket.o unificator_duplicate.o
 
 %.o: %.cpp
 	$(CC) -c -o $@ $< $(CFLAGS)
@@ -23,3 +23,4 @@ clean:
 	rm -rf *.o
 	rm -rf unificator
 	rm -rf test_unificator_dynamic_array
+	rm -rf test_unificator_sort
